@@ -16,6 +16,7 @@
 * Fix for Mango JavaScript statistics to handle edge case where a value existing at the from time may have been missed
 * Use XIDs in publisher REST endpoints for points lists
 * Upgrade to Swagger 2 for REST api documentation, view page at /swagger-ui.html
+* Fix additional context and unchange point value for inactive scripts on set point handlers
 
 *Version 3.4.5*
 * Content Security Policy (CSP) is now disabled by default and the configuration options have changed, please review the new setting names and update your env.properties file if you want to continue using CSP
